Generate and display data; create table view

--- a/MyCookingDiaryUITests/Info.plist
+++ b/MyCookingDiaryUITests/Info.plist
@@ -18,5 +18,9 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Access camera for My Cooking Diary App</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Access library for My Cooking Diary App</string>
 </dict>
 </plist>
